feat: add shape consistancy feature

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +176,36 @@
     "\n",
     "    return anisotropy\n",
     "\n",
+    "def calculate_aspect_ratio(image):\n",
+    "    \"\"\"\n",
+    "    Calculate the average width-to-height ratio of detected objects in the image.\n",
+    "    \"\"\"\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    _, binary_image = cv2.threshold(gray_image, 50, 255, cv2.THRESH_BINARY)\n",
+    "\n",
+    "    # Find contours\n",
+    "    contours, _ = cv2.findContours(binary_image, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    if len(contours) == 0:\n",
+    "        return 0  # No objects found\n",
+    "\n",
+    "    aspect_ratios = []\n",
+    "    for contour in contours:\n",
+    "        x, y, w, h = cv2.boundingRect(contour)\n",
+    "        if h > 0:  # Avoid division by zero\n",
+    "            aspect_ratios.append(w / h)\n",
+    "\n",
+    "    if len(aspect_ratios) == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    # Return the average aspect ratio\n",
+    "    return sum(aspect_ratios) / len(aspect_ratios)\n",
+    "\n",
     "def get_features(image):\n",
-    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, reflections, transparency, texture smoothness, shininess, surface anisotropy).\"\"\"\n",
+    "    \"\"\"\n",
+    "    Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, \n",
+    "    reflections, transparency, texture smoothness, shininess, surface anisotropy, aspect ratio).\n",
+    "    \"\"\"\n",
     "    yellow_amount = calculate_yellow_amount(image)\n",
     "    silver_amount = calculate_silver_amount(image)\n",
     "    parallel_lines = calculate_parallel_lines(image)\n",
@@ -186,23 +214,22 @@
     "    transparency_amount = calculate_transparency(image)\n",
     "    texture_smoothness = calculate_texture_smoothness(image)\n",
     "    shininess = calculate_shininess(image)\n",
-    "    surface_anisotropy = calculate_surface_anisotropy(image)\n",
+    "    surface_anisotropy = calculate_surface_anisotropy(image)  # Already implemented\n",
+    "    aspect_ratio = calculate_aspect_ratio(image)  # New feature\n",
     "\n",
-    "    return (yellow_amount, silver_amount, parallel_lines, cylinder_count, \n",
-    "            reflection_amount, transparency_amount, texture_smoothness, \n",
-    "            shininess, surface_anisotropy)\n"
+    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness, shininess, surface_anisotropy, aspect_ratio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Surface Anisotropy: (15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778), np.float32(2.768033))\n"
+      "Surface Anisotropy: (15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778), np.float32(2.768033), 1.0)\n"
      ]
     }
    ],
@@ -222,40 +249,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778), np.float32(2.768033))\n",
-      "Accuracy: 0.5989879822896901\n",
+      "Accuracy: 0.6268184693232132\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     battery       0.69      0.61      0.64       145\n",
-      "  biological       0.52      0.63      0.57       138\n",
-      "   cardboard       0.67      0.53      0.59       311\n",
-      "     clothes       0.68      0.93      0.78       886\n",
-      "       glass       0.48      0.55      0.51       455\n",
-      "       metal       0.46      0.16      0.24       163\n",
-      "       paper       0.62      0.43      0.51       263\n",
-      "     plastic       0.51      0.35      0.42       327\n",
-      "       shoes       0.53      0.46      0.49       317\n",
-      "       trash       0.56      0.47      0.51       157\n",
+      "     battery       0.73      0.62      0.67       145\n",
+      "  biological       0.55      0.66      0.60       138\n",
+      "   cardboard       0.69      0.55      0.61       311\n",
+      "     clothes       0.72      0.96      0.82       886\n",
+      "       glass       0.50      0.58      0.53       455\n",
+      "       metal       0.48      0.18      0.27       163\n",
+      "       paper       0.63      0.52      0.57       263\n",
+      "     plastic       0.57      0.38      0.46       327\n",
+      "       shoes       0.52      0.48      0.50       317\n",
+      "       trash       0.60      0.48      0.53       157\n",
       "\n",
-      "    accuracy                           0.60      3162\n",
-      "   macro avg       0.57      0.51      0.53      3162\n",
-      "weighted avg       0.59      0.60      0.58      3162\n",
+      "    accuracy                           0.63      3162\n",
+      "   macro avg       0.60      0.54      0.56      3162\n",
+      "weighted avg       0.62      0.63      0.61      3162\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Example feature extraction\n",
-    "test_im = cv2.imread(path + \"/garbage-dataset/cardboard/cardboard_25.jpg\")\n",
-    "print(get_features(test_im))\n",
-    "\n",
     "# Initialize lists to hold features and labels\n",
     "features = []\n",
     "labels = []\n",
@@ -286,13 +308,14 @@
     "# Convert features and labels to a DataFrame\n",
     "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', \n",
     "                                     'reflection_amount', 'transparency_amount', 'texture_smoothness', \n",
-    "                                     'shininess', 'surface_anisotropy'])\n",
+    "                                     'shininess', 'surface_anisotropy', 'aspect_ratio'])\n",
     "df['label'] = labels\n",
+    "\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
     "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', \n",
     "        'reflection_amount', 'transparency_amount', 'texture_smoothness', \n",
-    "        'shininess', 'surface_anisotropy']]\n",
+    "        'shininess', 'surface_anisotropy', 'aspect_ratio']]\n",
     "y = df['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -321,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: metal\n"
+      "Predicted class: glass\n"
      ]
     }
    ],
@@ -340,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -348,114 +371,112 @@
      "output_type": "stream",
      "text": [
       "Predicted class counts for test images containing trash:\n",
-      "Class: glass, Count: 41\n",
+      "Class: glass, Count: 45\n",
       "Class: trash, Count: 81\n",
-      "Class: paper, Count: 7\n",
-      "Class: cardboard, Count: 12\n",
-      "Class: plastic, Count: 9\n",
+      "Class: clothes, Count: 13\n",
+      "Class: paper, Count: 5\n",
       "Class: shoes, Count: 12\n",
-      "Class: metal, Count: 4\n",
-      "Class: clothes, Count: 15\n",
-      "Class: battery, Count: 3\n",
-      "Class: biological, Count: 6\n",
+      "Class: biological, Count: 8\n",
+      "Class: battery, Count: 4\n",
+      "Class: plastic, Count: 10\n",
+      "Class: cardboard, Count: 9\n",
+      "Class: metal, Count: 3\n",
       "Predicted class counts for test images containing glass:\n",
-      "Class: glass, Count: 325\n",
-      "Class: metal, Count: 11\n",
-      "Class: plastic, Count: 41\n",
-      "Class: cardboard, Count: 19\n",
-      "Class: clothes, Count: 83\n",
-      "Class: shoes, Count: 62\n",
-      "Class: trash, Count: 14\n",
-      "Class: battery, Count: 15\n",
-      "Class: biological, Count: 24\n",
-      "Class: paper, Count: 19\n",
+      "Class: glass, Count: 341\n",
+      "Class: metal, Count: 9\n",
+      "Class: plastic, Count: 44\n",
+      "Class: shoes, Count: 49\n",
+      "Class: clothes, Count: 84\n",
+      "Class: trash, Count: 11\n",
+      "Class: biological, Count: 21\n",
+      "Class: paper, Count: 20\n",
+      "Class: battery, Count: 19\n",
+      "Class: cardboard, Count: 15\n",
       "Predicted class counts for test images containing battery:\n",
       "Class: shoes, Count: 27\n",
-      "Class: glass, Count: 31\n",
-      "Class: battery, Count: 112\n",
-      "Class: biological, Count: 7\n",
+      "Class: glass, Count: 28\n",
+      "Class: battery, Count: 113\n",
+      "Class: biological, Count: 12\n",
       "Class: trash, Count: 1\n",
-      "Class: paper, Count: 3\n",
-      "Class: plastic, Count: 1\n",
-      "Class: clothes, Count: 4\n",
+      "Class: clothes, Count: 5\n",
       "Class: cardboard, Count: 2\n",
       "Class: metal, Count: 1\n",
       "Predicted class counts for test images containing clothes:\n",
-      "Class: clothes, Count: 990\n",
-      "Class: paper, Count: 16\n",
-      "Class: shoes, Count: 5\n",
-      "Class: plastic, Count: 11\n",
-      "Class: glass, Count: 18\n",
-      "Class: cardboard, Count: 10\n",
-      "Class: biological, Count: 9\n",
-      "Class: metal, Count: 6\n",
+      "Class: clothes, Count: 995\n",
+      "Class: paper, Count: 15\n",
+      "Class: plastic, Count: 13\n",
+      "Class: biological, Count: 12\n",
+      "Class: trash, Count: 1\n",
+      "Class: glass, Count: 17\n",
+      "Class: cardboard, Count: 4\n",
+      "Class: shoes, Count: 7\n",
+      "Class: metal, Count: 1\n",
       "Class: battery, Count: 1\n",
       "Predicted class counts for test images containing metal:\n",
-      "Class: clothes, Count: 43\n",
-      "Class: glass, Count: 41\n",
-      "Class: battery, Count: 5\n",
-      "Class: metal, Count: 48\n",
-      "Class: shoes, Count: 27\n",
-      "Class: biological, Count: 13\n",
-      "Class: plastic, Count: 13\n",
-      "Class: cardboard, Count: 4\n",
-      "Class: paper, Count: 7\n",
-      "Class: trash, Count: 3\n",
+      "Class: clothes, Count: 31\n",
+      "Class: shoes, Count: 30\n",
+      "Class: battery, Count: 7\n",
+      "Class: metal, Count: 52\n",
+      "Class: glass, Count: 30\n",
+      "Class: paper, Count: 10\n",
+      "Class: biological, Count: 15\n",
+      "Class: plastic, Count: 18\n",
+      "Class: cardboard, Count: 6\n",
+      "Class: trash, Count: 5\n",
       "Predicted class counts for test images containing plastic:\n",
-      "Class: plastic, Count: 142\n",
-      "Class: cardboard, Count: 23\n",
-      "Class: clothes, Count: 107\n",
-      "Class: paper, Count: 25\n",
+      "Class: plastic, Count: 164\n",
+      "Class: cardboard, Count: 21\n",
+      "Class: clothes, Count: 92\n",
+      "Class: glass, Count: 59\n",
+      "Class: battery, Count: 2\n",
+      "Class: paper, Count: 21\n",
+      "Class: shoes, Count: 12\n",
+      "Class: metal, Count: 7\n",
       "Class: trash, Count: 10\n",
-      "Class: shoes, Count: 14\n",
-      "Class: glass, Count: 60\n",
-      "Class: battery, Count: 1\n",
-      "Class: metal, Count: 6\n",
       "Class: biological, Count: 9\n",
       "Predicted class counts for test images containing cardboard:\n",
-      "Class: cardboard, Count: 202\n",
-      "Class: shoes, Count: 15\n",
-      "Class: paper, Count: 19\n",
-      "Class: trash, Count: 9\n",
-      "Class: glass, Count: 25\n",
-      "Class: plastic, Count: 17\n",
-      "Class: biological, Count: 14\n",
-      "Class: clothes, Count: 59\n",
+      "Class: cardboard, Count: 219\n",
+      "Class: clothes, Count: 53\n",
+      "Class: paper, Count: 16\n",
+      "Class: trash, Count: 11\n",
+      "Class: glass, Count: 20\n",
+      "Class: shoes, Count: 9\n",
+      "Class: biological, Count: 16\n",
+      "Class: plastic, Count: 16\n",
       "Class: battery, Count: 4\n",
       "Class: metal, Count: 1\n",
       "Predicted class counts for test images containing paper:\n",
-      "Class: paper, Count: 161\n",
-      "Class: clothes, Count: 86\n",
-      "Class: glass, Count: 33\n",
-      "Class: metal, Count: 7\n",
-      "Class: cardboard, Count: 12\n",
-      "Class: plastic, Count: 18\n",
-      "Class: trash, Count: 6\n",
+      "Class: paper, Count: 184\n",
+      "Class: clothes, Count: 58\n",
+      "Class: glass, Count: 32\n",
+      "Class: cardboard, Count: 18\n",
+      "Class: plastic, Count: 23\n",
+      "Class: shoes, Count: 9\n",
+      "Class: metal, Count: 4\n",
       "Class: battery, Count: 3\n",
-      "Class: shoes, Count: 7\n",
-      "Class: biological, Count: 3\n",
+      "Class: biological, Count: 2\n",
+      "Class: trash, Count: 3\n",
       "Predicted class counts for test images containing biological:\n",
-      "Class: cardboard, Count: 8\n",
-      "Class: shoes, Count: 25\n",
-      "Class: clothes, Count: 12\n",
-      "Class: biological, Count: 122\n",
-      "Class: glass, Count: 23\n",
-      "Class: trash, Count: 2\n",
-      "Class: plastic, Count: 2\n",
-      "Class: paper, Count: 2\n",
-      "Class: metal, Count: 2\n",
-      "Class: battery, Count: 2\n",
-      "Predicted class counts for test images containing shoes:\n",
-      "Class: glass, Count: 67\n",
-      "Class: shoes, Count: 182\n",
-      "Class: clothes, Count: 68\n",
+      "Class: biological, Count: 129\n",
+      "Class: clothes, Count: 11\n",
       "Class: cardboard, Count: 7\n",
-      "Class: metal, Count: 7\n",
-      "Class: paper, Count: 6\n",
-      "Class: plastic, Count: 7\n",
-      "Class: biological, Count: 31\n",
-      "Class: trash, Count: 4\n",
-      "Class: battery, Count: 17\n"
+      "Class: shoes, Count: 24\n",
+      "Class: glass, Count: 20\n",
+      "Class: battery, Count: 2\n",
+      "Class: trash, Count: 2\n",
+      "Class: paper, Count: 4\n",
+      "Class: metal, Count: 1\n",
+      "Predicted class counts for test images containing shoes:\n",
+      "Class: glass, Count: 55\n",
+      "Class: shoes, Count: 205\n",
+      "Class: clothes, Count: 73\n",
+      "Class: trash, Count: 2\n",
+      "Class: cardboard, Count: 12\n",
+      "Class: biological, Count: 28\n",
+      "Class: battery, Count: 11\n",
+      "Class: metal, Count: 2\n",
+      "Class: paper, Count: 4\n",
+      "Class: plastic, Count: 4\n"
      ]
     }
    ],
