feat: add whiteness and curve lines feature

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,10 +201,51 @@
     "    # Return the average aspect ratio\n",
     "    return sum(aspect_ratios) / len(aspect_ratios)\n",
     "\n",
+    "def calculate_whiteness(image):\n",
+    "    \"\"\"Calculate the proportion of white pixels in the image.\"\"\"\n",
+    "    hsv_image = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
+    "    lower_white = np.array([0, 0, 200])\n",
+    "    upper_white = np.array([180, 50, 255])\n",
+    "    white_mask = cv2.inRange(hsv_image, lower_white, upper_white)\n",
+    "    whiteness = cv2.countNonZero(white_mask) / (image.shape[0] * image.shape[1])\n",
+    "    return whiteness\n",
+    "\n",
+    "def calculate_line_curvature(image):\n",
+    "    \"\"\"\n",
+    "    Calculate the average curvature of detected edges in the image.\n",
+    "    High curvature may indicate folds or wavy edges, common in clothing.\n",
+    "    \"\"\"\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    edges = cv2.Canny(gray_image, 50, 150, apertureSize=3)\n",
+    "    \n",
+    "    # Find contours\n",
+    "    contours, _ = cv2.findContours(edges, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    \n",
+    "    if len(contours) == 0:\n",
+    "        return 0  # No contours found\n",
+    "\n",
+    "    curvatures = []\n",
+    "    for contour in contours:\n",
+    "        if len(contour) >= 5:  # Need at least 5 points to fit an ellipse\n",
+    "            ellipse = cv2.fitEllipse(contour)\n",
+    "            major_axis = max(ellipse[1])  # Length of the major axis\n",
+    "            minor_axis = min(ellipse[1])  # Length of the minor axis\n",
+    "            \n",
+    "            if major_axis > 0:\n",
+    "                curvature = minor_axis / major_axis  # Ratio of axes approximates curvature\n",
+    "                curvatures.append(curvature)\n",
+    "    \n",
+    "    if len(curvatures) == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    # Return the average curvature\n",
+    "    return sum(curvatures) / len(curvatures)\n",
+    "\n",
     "def get_features(image):\n",
     "    \"\"\"\n",
     "    Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, \n",
-    "    reflections, transparency, texture smoothness, shininess, surface anisotropy, aspect ratio).\n",
+    "    reflections, transparency, texture smoothness, shininess, surface anisotropy, aspect ratio,\n",
+    "    whiteness, edge smoothness).\n",
     "    \"\"\"\n",
     "    yellow_amount = calculate_yellow_amount(image)\n",
     "    silver_amount = calculate_silver_amount(image)\n",
@@ -214,22 +255,25 @@
     "    transparency_amount = calculate_transparency(image)\n",
     "    texture_smoothness = calculate_texture_smoothness(image)\n",
     "    shininess = calculate_shininess(image)\n",
-    "    surface_anisotropy = calculate_surface_anisotropy(image)  # Already implemented\n",
-    "    aspect_ratio = calculate_aspect_ratio(image)  # New feature\n",
-    "\n",
-    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness, shininess, surface_anisotropy, aspect_ratio"
+    "    surface_anisotropy = calculate_surface_anisotropy(image)\n",
+    "    aspect_ratio = calculate_aspect_ratio(image)\n",
+    "    whiteness = calculate_whiteness(image)\n",
+    "    line_curvature = calculate_line_curvature(image)\n",
+    "    return (yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount,\n",
+    "            transparency_amount, texture_smoothness, shininess, surface_anisotropy, \n",
+    "            aspect_ratio, whiteness, line_curvature)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Surface Anisotropy: (15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778), np.float32(2.768033), 1.0)\n"
+      "Surface Anisotropy: (15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778), np.float32(2.768033), 1.0, 0.7999305555555556, 0.39463143158270836)\n"
      ]
     }
    ],
@@ -249,29 +293,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6268184693232132\n",
+      "Accuracy: 0.6325110689437066\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     battery       0.73      0.62      0.67       145\n",
-      "  biological       0.55      0.66      0.60       138\n",
-      "   cardboard       0.69      0.55      0.61       311\n",
+      "     battery       0.67      0.60      0.64       145\n",
+      "  biological       0.57      0.72      0.64       138\n",
+      "   cardboard       0.73      0.60      0.66       311\n",
       "     clothes       0.72      0.96      0.82       886\n",
-      "       glass       0.50      0.58      0.53       455\n",
-      "       metal       0.48      0.18      0.27       163\n",
-      "       paper       0.63      0.52      0.57       263\n",
-      "     plastic       0.57      0.38      0.46       327\n",
-      "       shoes       0.52      0.48      0.50       317\n",
-      "       trash       0.60      0.48      0.53       157\n",
+      "       glass       0.51      0.57      0.54       455\n",
+      "       metal       0.42      0.17      0.24       163\n",
+      "       paper       0.63      0.50      0.56       263\n",
+      "     plastic       0.60      0.43      0.50       327\n",
+      "       shoes       0.51      0.45      0.48       317\n",
+      "       trash       0.61      0.47      0.53       157\n",
       "\n",
       "    accuracy                           0.63      3162\n",
-      "   macro avg       0.60      0.54      0.56      3162\n",
+      "   macro avg       0.60      0.55      0.56      3162\n",
       "weighted avg       0.62      0.63      0.61      3162\n",
       "\n"
      ]
@@ -308,14 +352,15 @@
     "# Convert features and labels to a DataFrame\n",
     "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', \n",
     "                                     'reflection_amount', 'transparency_amount', 'texture_smoothness', \n",
-    "                                     'shininess', 'surface_anisotropy', 'aspect_ratio'])\n",
+    "                                     'shininess', 'surface_anisotropy', 'aspect_ratio', \n",
+    "                                     'whiteness', 'line_curvature'])\n",
     "df['label'] = labels\n",
     "\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
     "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', \n",
     "        'reflection_amount', 'transparency_amount', 'texture_smoothness', \n",
-    "        'shininess', 'surface_anisotropy', 'aspect_ratio']]\n",
+    "        'shininess', 'surface_anisotropy', 'aspect_ratio', 'whiteness','line_curvature']]\n",
     "y = df['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -344,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -371,112 +416,111 @@
      "output_type": "stream",
      "text": [
       "Predicted class counts for test images containing trash:\n",
+      "Class: trash, Count: 87\n",
+      "Class: clothes, Count: 11\n",
+      "Class: plastic, Count: 12\n",
       "Class: glass, Count: 45\n",
-      "Class: trash, Count: 81\n",
-      "Class: clothes, Count: 13\n",
-      "Class: paper, Count: 5\n",
-      "Class: shoes, Count: 12\n",
-      "Class: biological, Count: 8\n",
-      "Class: battery, Count: 4\n",
-      "Class: plastic, Count: 10\n",
-      "Class: cardboard, Count: 9\n",
-      "Class: metal, Count: 3\n",
+      "Class: paper, Count: 4\n",
+      "Class: shoes, Count: 9\n",
+      "Class: metal, Count: 6\n",
+      "Class: battery, Count: 3\n",
+      "Class: cardboard, Count: 10\n",
+      "Class: biological, Count: 3\n",
       "Predicted class counts for test images containing glass:\n",
-      "Class: glass, Count: 341\n",
-      "Class: metal, Count: 9\n",
-      "Class: plastic, Count: 44\n",
-      "Class: shoes, Count: 49\n",
-      "Class: clothes, Count: 84\n",
-      "Class: trash, Count: 11\n",
-      "Class: biological, Count: 21\n",
-      "Class: paper, Count: 20\n",
-      "Class: battery, Count: 19\n",
-      "Class: cardboard, Count: 15\n",
+      "Class: glass, Count: 365\n",
+      "Class: metal, Count: 10\n",
+      "Class: trash, Count: 15\n",
+      "Class: plastic, Count: 37\n",
+      "Class: shoes, Count: 54\n",
+      "Class: clothes, Count: 75\n",
+      "Class: biological, Count: 18\n",
+      "Class: cardboard, Count: 8\n",
+      "Class: paper, Count: 14\n",
+      "Class: battery, Count: 17\n",
       "Predicted class counts for test images containing battery:\n",
-      "Class: shoes, Count: 27\n",
-      "Class: glass, Count: 28\n",
-      "Class: battery, Count: 113\n",
-      "Class: biological, Count: 12\n",
+      "Class: shoes, Count: 29\n",
+      "Class: glass, Count: 23\n",
+      "Class: battery, Count: 116\n",
+      "Class: biological, Count: 11\n",
       "Class: trash, Count: 1\n",
-      "Class: clothes, Count: 5\n",
-      "Class: cardboard, Count: 2\n",
+      "Class: clothes, Count: 4\n",
+      "Class: cardboard, Count: 3\n",
+      "Class: plastic, Count: 1\n",
       "Class: metal, Count: 1\n",
       "Predicted class counts for test images containing clothes:\n",
-      "Class: clothes, Count: 995\n",
-      "Class: paper, Count: 15\n",
-      "Class: plastic, Count: 13\n",
-      "Class: biological, Count: 12\n",
-      "Class: trash, Count: 1\n",
-      "Class: glass, Count: 17\n",
-      "Class: cardboard, Count: 4\n",
+      "Class: clothes, Count: 1006\n",
+      "Class: paper, Count: 13\n",
+      "Class: plastic, Count: 14\n",
       "Class: shoes, Count: 7\n",
+      "Class: biological, Count: 7\n",
+      "Class: cardboard, Count: 3\n",
+      "Class: glass, Count: 14\n",
       "Class: metal, Count: 1\n",
       "Class: battery, Count: 1\n",
       "Predicted class counts for test images containing metal:\n",
-      "Class: clothes, Count: 31\n",
-      "Class: shoes, Count: 30\n",
-      "Class: battery, Count: 7\n",
-      "Class: metal, Count: 52\n",
-      "Class: glass, Count: 30\n",
+      "Class: clothes, Count: 41\n",
+      "Class: shoes, Count: 35\n",
+      "Class: battery, Count: 5\n",
+      "Class: metal, Count: 43\n",
+      "Class: glass, Count: 35\n",
       "Class: paper, Count: 10\n",
-      "Class: biological, Count: 15\n",
-      "Class: plastic, Count: 18\n",
+      "Class: biological, Count: 13\n",
+      "Class: plastic, Count: 12\n",
       "Class: cardboard, Count: 6\n",
-      "Class: trash, Count: 5\n",
+      "Class: trash, Count: 4\n",
       "Predicted class counts for test images containing plastic:\n",
-      "Class: plastic, Count: 164\n",
-      "Class: cardboard, Count: 21\n",
-      "Class: clothes, Count: 92\n",
-      "Class: glass, Count: 59\n",
+      "Class: plastic, Count: 171\n",
+      "Class: glass, Count: 61\n",
+      "Class: clothes, Count: 89\n",
       "Class: battery, Count: 2\n",
-      "Class: paper, Count: 21\n",
-      "Class: shoes, Count: 12\n",
-      "Class: metal, Count: 7\n",
-      "Class: trash, Count: 10\n",
-      "Class: biological, Count: 9\n",
-      "Predicted class counts for test images containing cardboard:\n",
-      "Class: cardboard, Count: 219\n",
-      "Class: clothes, Count: 53\n",
-      "Class: paper, Count: 16\n",
-      "Class: trash, Count: 11\n",
-      "Class: glass, Count: 20\n",
-      "Class: shoes, Count: 9\n",
-      "Class: biological, Count: 16\n",
-      "Class: plastic, Count: 16\n",
-      "Class: battery, Count: 4\n",
-      "Class: metal, Count: 1\n",
-      "Predicted class counts for test images containing paper:\n",
-      "Class: paper, Count: 184\n",
-      "Class: clothes, Count: 58\n",
-      "Class: glass, Count: 32\n",
+      "Class: paper, Count: 17\n",
       "Class: cardboard, Count: 18\n",
-      "Class: plastic, Count: 23\n",
-      "Class: shoes, Count: 9\n",
       "Class: metal, Count: 4\n",
-      "Class: battery, Count: 3\n",
-      "Class: biological, Count: 2\n",
-      "Class: trash, Count: 3\n",
-      "Predicted class counts for test images containing biological:\n",
-      "Class: biological, Count: 129\n",
-      "Class: clothes, Count: 11\n",
-      "Class: cardboard, Count: 7\n",
-      "Class: shoes, Count: 24\n",
-      "Class: glass, Count: 20\n",
-      "Class: battery, Count: 2\n",
-      "Class: trash, Count: 2\n",
-      "Class: paper, Count: 4\n",
-      "Class: metal, Count: 1\n",
-      "Predicted class counts for test images containing shoes:\n",
-      "Class: glass, Count: 55\n",
-      "Class: shoes, Count: 205\n",
-      "Class: clothes, Count: 73\n",
-      "Class: trash, Count: 2\n",
-      "Class: cardboard, Count: 12\n",
-      "Class: biological, Count: 28\n",
-      "Class: battery, Count: 11\n",
+      "Class: shoes, Count: 15\n",
+      "Class: biological, Count: 7\n",
+      "Class: trash, Count: 13\n",
+      "Predicted class counts for test images containing cardboard:\n",
+      "Class: cardboard, Count: 216\n",
+      "Class: clothes, Count: 57\n",
+      "Class: paper, Count: 13\n",
+      "Class: glass, Count: 22\n",
+      "Class: shoes, Count: 13\n",
+      "Class: plastic, Count: 15\n",
+      "Class: trash, Count: 9\n",
+      "Class: biological, Count: 14\n",
+      "Class: battery, Count: 4\n",
       "Class: metal, Count: 2\n",
-      "Class: paper, Count: 4\n",
-      "Class: plastic, Count: 4\n"
+      "Predicted class counts for test images containing paper:\n",
+      "Class: cardboard, Count: 14\n",
+      "Class: clothes, Count: 58\n",
+      "Class: glass, Count: 33\n",
+      "Class: metal, Count: 5\n",
+      "Class: paper, Count: 183\n",
+      "Class: plastic, Count: 22\n",
+      "Class: shoes, Count: 9\n",
+      "Class: battery, Count: 4\n",
+      "Class: trash, Count: 6\n",
+      "Class: biological, Count: 2\n",
+      "Predicted class counts for test images containing biological:\n",
+      "Class: biological, Count: 136\n",
+      "Class: clothes, Count: 12\n",
+      "Class: glass, Count: 16\n",
+      "Class: shoes, Count: 27\n",
+      "Class: trash, Count: 1\n",
+      "Class: paper, Count: 2\n",
+      "Class: cardboard, Count: 4\n",
+      "Class: plastic, Count: 2\n",
+      "Predicted class counts for test images containing shoes:\n",
+      "Class: glass, Count: 54\n",
+      "Class: shoes, Count: 201\n",
+      "Class: clothes, Count: 73\n",
+      "Class: battery, Count: 11\n",
+      "Class: cardboard, Count: 13\n",
+      "Class: plastic, Count: 8\n",
+      "Class: trash, Count: 3\n",
+      "Class: paper, Count: 6\n",
+      "Class: metal, Count: 3\n",
+      "Class: biological, Count: 24\n"
      ]
     }
    ],
