feat: prove the 1st hypothesis

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,7 @@
     "import pandas as pd\n",
     "import warnings\n",
     "\n",
+    "from scipy.stats import ttest_ind, f_oneway, mannwhitneyu\n",
     "from skimage.feature import graycomatrix, graycoprops\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,6 +547,83 @@
    "metadata": {},
    "source": [
     "## Проверка гипотез"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №1 О наличие картона на картинке можно судить по скосу желтого цвета.\n",
+    "\n",
+    "- Способы проверки\n",
+    "    - **t-критерий Стьюдента (t-test)**: Сравнение средней доли жёлтого цвета в картинках с картоном и другими классами.\n",
+    "    - **ANOVA (дисперсионный анализ)**: Проверка, есть ли значимые различия между группами (картон и другие классы) по количеству жёлтого цвета.\n",
+    "    - **Критерий Манна-Уитни (U-тест)**: Непараметрический тест для сравнения распределений двух групп (в данном случае картон и другие классы)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-test: Statistic = 3.683066343249196, p-value = 0.00023621963453461276\n",
+      "ANOVA: Statistic = 16.865194578791744, p-value = 4.0292196417557166e-05\n",
+      "Mann-Whitney: Statistic = 22080315.5, p-value = 1.0126318223771204e-146\n",
+      "Гипотеза подтверждена: наличие картона связано с желтым цветом.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cardboard_path = os.path.join(path + \"/garbage-dataset\", \"cardboard\")\n",
+    "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"cardboard\"]\n",
+    "\n",
+    "def load_images_from_folder(folder):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        filepath = os.path.join(folder, filename)\n",
+    "        image = cv2.imread(filepath)\n",
+    "        if image is not None:\n",
+    "            images.append(image)\n",
+    "    return images\n",
+    "\n",
+    "cardboard_images = load_images_from_folder(cardboard_path)\n",
+    "cardboard_yellow_amounts = [calculate_yellow_amount(img) for img in cardboard_images]\n",
+    "\n",
+    "other_yellow_amounts = []\n",
+    "for path in other_paths:\n",
+    "    other_images = load_images_from_folder(path)\n",
+    "    other_yellow_amounts.extend([calculate_yellow_amount(img) for img in other_images])\n",
+    "\n",
+    "# Проверка гипотез\n",
+    "# 1. t-критерий Стьюдента\n",
+    "t_stat, t_pvalue = ttest_ind(cardboard_yellow_amounts, other_yellow_amounts, equal_var=False)\n",
+    "\n",
+    "# 2. ANOVA\n",
+    "anova_stat, anova_pvalue = f_oneway(cardboard_yellow_amounts, other_yellow_amounts)\n",
+    "\n",
+    "# 3. Критерий Манна-Уитни\n",
+    "mann_stat, mann_pvalue = mannwhitneyu(cardboard_yellow_amounts, other_yellow_amounts, alternative='two-sided')\n",
+    "\n",
+    "results = {\n",
+    "    \"t-test\": {\"statistic\": t_stat, \"p-value\": t_pvalue},\n",
+    "    \"ANOVA\": {\"statistic\": anova_stat, \"p-value\": anova_pvalue},\n",
+    "    \"Mann-Whitney\": {\"statistic\": mann_stat, \"p-value\": mann_pvalue},\n",
+    "}\n",
+    "\n",
+    "for test, result in results.items():\n",
+    "    print(f\"{test}: Statistic = {result['statistic']}, p-value = {result['p-value']}\")\n",
+    "\n",
+    "alpha = 0.05\n",
+    "hypothesis_results = {test: result['p-value'] < alpha for test, result in results.items()}\n",
+    "\n",
+    "if all(hypothesis_results.values()):\n",
+    "    print(\"Гипотеза подтверждена: наличие картона связано c желтым цветом.\")\n",
+    "else:\n",
+    "    print(\"Гипотеза не подтверждена: наличие картона не связано c желтым цветом.\")\n"
    ]
   }
  ],
