--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
       "t-test: Statistic = 3.683066343249196, p-value = 0.00023621963453461276\n",
       "ANOVA: Statistic = 16.865194578791744, p-value = 4.0292196417557166e-05\n",
       "Mann-Whitney: Statistic = 22080315.5, p-value = 1.0126318223771204e-146\n",
-      "Гипотеза подтверждена: наличие картона связано с желтым цветом.\n"
+      "Гипотеза подтверждена: наличие картона связано c желтым цветом.\n"
      ]
     }
    ],
@@ -586,7 +586,7 @@
     "    for filename in os.listdir(folder):\n",
     "        filepath = os.path.join(folder, filename)\n",
     "        image = cv2.imread(filepath)\n",
-    "        if image is not None:\n",
+    "        if image is not None: \n",
     "            images.append(image)\n",
     "    return images\n",
     "\n",
@@ -594,8 +594,8 @@
     "cardboard_yellow_amounts = [calculate_yellow_amount(img) for img in cardboard_images]\n",
     "\n",
     "other_yellow_amounts = []\n",
-    "for path in other_paths:\n",
-    "    other_images = load_images_from_folder(path)\n",
+    "for other_path in other_paths:\n",
+    "    other_images = load_images_from_folder(other_path)\n",
     "    other_yellow_amounts.extend([calculate_yellow_amount(img) for img in other_images])\n",
     "\n",
     "# Проверка гипотез\n",
@@ -623,7 +623,84 @@
     "if all(hypothesis_results.values()):\n",
     "    print(\"Гипотеза подтверждена: наличие картона связано c желтым цветом.\")\n",
     "else:\n",
-    "    print(\"Гипотеза не подтверждена: наличие картона не связано c желтым цветом.\")\n"
+    "    print(\"Гипотеза не подтверждена: наличие картона не связано c желтым цветом.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №2 О наличие металла на картинке можно судить по скосу серого (серебряного) цвета.\n",
+    "\n",
+    "- Способы проверки\n",
+    "    - **t-критерий Стьюдента (t-test)**: Сравнение средней доли серебряного цвета в картинках с метеаллом и другими классами.\n",
+    "    - **ANOVA (дисперсионный анализ)**: Проверка, есть ли значимые различия между группами (металл и другие классы) по количеству серебряного цвета.\n",
+    "    - **Критерий Манна-Уитни (U-тест)**: Непараметрический тест для сравнения распределений двух групп (в данном случае металл и другие классы)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-test: Statistic = -4.323031800618086, p-value = 1.5942022503512946e-05\n",
+      "ANOVA: Statistic = 2.55966874289979, p-value = 0.10963753760234325\n",
+      "Mann-Whitney: Statistic = 9311421.5, p-value = 0.14445379875910133\n",
+      "Гипотеза не подтверждена: наличие картона не связано c серебряным цветом.\n"
+     ]
+    }
+   ],
+   "source": [
+    "metal_path = os.path.join(path + \"/garbage-dataset\", \"metal\")\n",
+    "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"metal\"]\n",
+    "\n",
+    "def load_images_from_folder(folder):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        filepath = os.path.join(folder, filename)\n",
+    "        image = cv2.imread(filepath)\n",
+    "        if image is not None:\n",
+    "            images.append(image)\n",
+    "    return images\n",
+    "\n",
+    "metal_images = load_images_from_folder(metal_path)\n",
+    "metal_silver_amounts = [calculate_yellow_amount(img) for img in metal_images]\n",
+    "\n",
+    "other_yellow_amounts = []\n",
+    "for other_path in other_paths:\n",
+    "    other_images = load_images_from_folder(other_path)\n",
+    "    other_yellow_amounts.extend([calculate_yellow_amount(img) for img in other_images])\n",
+    "\n",
+    "# Проверка гипотез\n",
+    "# 1. t-критерий Стьюдента\n",
+    "t_stat, t_pvalue = ttest_ind(metal_silver_amounts, other_yellow_amounts, equal_var=False)\n",
+    "\n",
+    "# 2. ANOVA\n",
+    "anova_stat, anova_pvalue = f_oneway(metal_silver_amounts, other_yellow_amounts)\n",
+    "\n",
+    "# 3. Критерий Манна-Уитни\n",
+    "mann_stat, mann_pvalue = mannwhitneyu(metal_silver_amounts, other_yellow_amounts, alternative='two-sided')\n",
+    "\n",
+    "results = {\n",
+    "    \"t-test\": {\"statistic\": t_stat, \"p-value\": t_pvalue},\n",
+    "    \"ANOVA\": {\"statistic\": anova_stat, \"p-value\": anova_pvalue},\n",
+    "    \"Mann-Whitney\": {\"statistic\": mann_stat, \"p-value\": mann_pvalue},\n",
+    "}\n",
+    "\n",
+    "for test, result in results.items():\n",
+    "    print(f\"{test}: Statistic = {result['statistic']}, p-value = {result['p-value']}\")\n",
+    "\n",
+    "alpha = 0.05\n",
+    "hypothesis_results = {test: result['p-value'] < alpha for test, result in results.items()}\n",
+    "\n",
+    "if all(hypothesis_results.values()):\n",
+    "    print(\"Гипотеза подтверждена: наличие металла связано c серебряным цветом.\")\n",
+    "else:\n",
+    "    print(\"Гипотеза не подтверждена: наличие картона не связано c серебряным цветом.\")"
    ]
   }
  ],
